<resources>
    <string name="app_name">MyFavouriteBook</string>
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="book_name">Book name</string>
    <string name="book_author_name">Bookauthorname</string>
    <string name="add_book">Add book</string>
    <string name="book_image_url">Book imge url</string>
    <string name="is_released">Is Released</string>
    <string name="empty_fav_list">Favourite list is empty please add book to favourite</string>
    <string name="book_desc">book description</string>
    <string name="register">Register</string>
    <string name="add_book_to_fav">Add new Book to fav</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="check_register">Please register to login to app</string>
    <string name="please_confirm_password">Please Confirm your passord</string>
    <string name="insert_success">Insert User success</string>
    <string name="login_success">Login success</string>
    <string name="user_name_or_password_error">Error in your password or use name</string>
    <string name="test_flow">Test flow</string>
</resources>